@@ -695,51 +695,76 @@ sk_sp<VertexBuffer> SkMesh::CopyVertexBuffer(GrDirectContext* dc, sk_sp<VertexBu
     return MakeVertexBuffer(dc, data, vb->size());
 }
 
-SkMesh SkMesh::Make(sk_sp<SkMeshSpecification> spec,
-                    Mode mode,
-                    sk_sp<VertexBuffer> vb,
-                    size_t vertexCount,
-                    size_t vertexOffset,
-                    sk_sp<const SkData> uniforms,
-                    const SkRect& bounds) {
-    SkMesh cm;
-    cm.fSpec     = std::move(spec);
-    cm.fMode     = mode;
-    cm.fVB       = std::move(vb);
-    cm.fUniforms = std::move(uniforms);
-    cm.fVCount   = vertexCount;
-    cm.fVOffset  = vertexOffset;
-    cm.fBounds   = bounds;
-    return cm.validate() ? cm : SkMesh{};
+SkMesh::Result SkMesh::Make(sk_sp<SkMeshSpecification> spec,
+                            Mode mode,
+                            sk_sp<VertexBuffer> vb,
+                            size_t vertexCount,
+                            size_t vertexOffset,
+                            sk_sp<const SkData> uniforms,
+                            const SkRect& bounds) {
+    SkMesh mesh;
+    mesh.fSpec     = std::move(spec);
+    mesh.fMode     = mode;
+    mesh.fVB       = std::move(vb);
+    mesh.fUniforms = std::move(uniforms);
+    mesh.fVCount   = vertexCount;
+    mesh.fVOffset  = vertexOffset;
+    mesh.fBounds   = bounds;
+    auto [valid, msg] = mesh.validate();
+    if (!valid) {
+        mesh = {};
+    }
+#ifdef SK_LEGACY_MESH_MAKE
+    return mesh;
+#else
+    return {std::move(mesh), std::move(msg)};
+#endif
 }
 
-SkMesh SkMesh::MakeIndexed(sk_sp<SkMeshSpecification> spec,
-                           Mode mode,
-                           sk_sp<VertexBuffer> vb,
-                           size_t vertexCount,
-                           size_t vertexOffset,
-                           sk_sp<IndexBuffer> ib,
-                           size_t indexCount,
-                           size_t indexOffset,
-                           sk_sp<const SkData> uniforms,
-                           const SkRect& bounds) {
-    SkMesh cm;
-    cm.fSpec     = std::move(spec);
-    cm.fMode     = mode;
-    cm.fVB       = std::move(vb);
-    cm.fVCount   = vertexCount;
-    cm.fVOffset  = vertexOffset;
-    cm.fIB       = std::move(ib);
-    cm.fUniforms = std::move(uniforms);
-    cm.fICount   = indexCount;
-    cm.fIOffset  = indexOffset;
-    cm.fBounds   = bounds;
-    return cm.validate() ? cm : SkMesh{};
+SkMesh::Result SkMesh::MakeIndexed(sk_sp<SkMeshSpecification> spec,
+                                   Mode mode,
+                                   sk_sp<VertexBuffer> vb,
+                                   size_t vertexCount,
+                                   size_t vertexOffset,
+                                   sk_sp<IndexBuffer> ib,
+                                   size_t indexCount,
+                                   size_t indexOffset,
+                                   sk_sp<const SkData> uniforms,
+                                   const SkRect& bounds) {
+    if (!ib) {
+        // We check this before calling validate to disambiguate from a non-indexed mesh where
+        // IB is expected to be null.
+#ifdef SK_LEGACY_MESH_MAKE
+        return {};
+#else
+        return {{}, SkString{"An index buffer is required."}};
+#endif
+    }
+    SkMesh mesh;
+    mesh.fSpec     = std::move(spec);
+    mesh.fMode     = mode;
+    mesh.fVB       = std::move(vb);
+    mesh.fVCount   = vertexCount;
+    mesh.fVOffset  = vertexOffset;
+    mesh.fIB       = std::move(ib);
+    mesh.fUniforms = std::move(uniforms);
+    mesh.fICount   = indexCount;
+    mesh.fIOffset  = indexOffset;
+    mesh.fBounds   = bounds;
+    auto [valid, msg] = mesh.validate();
+    if (!valid) {
+        mesh = {};
+    }
+#ifdef SK_LEGACY_MESH_MAKE
+    return mesh;
+#else
+    return {std::move(mesh), std::move(msg)};
+#endif
 }
 
 bool SkMesh::isValid() const {
     bool valid = SkToBool(fSpec);
-    SkASSERT(valid == this->validate());
+    SkASSERT(valid == std::get<0>(this->validate()));
     return valid;
 }
 
@@ -751,17 +776,14 @@ static size_t min_vcount_for_mode(SkMesh::Mode mode) {
     SkUNREACHABLE;
 }
 
-bool SkMesh::validate() const {
+std::tuple<bool, SkString> SkMesh::validate() const {
+#define FAIL_MESH_VALIDATE(...)  return std::make_tuple(false, SkStringPrintf(__VA_ARGS__))
     if (!fSpec) {
-        return false;
+        FAIL_MESH_VALIDATE("SkMeshSpecification is required.");
     }
 
     if (!fVB) {
-        return false;
-    }
-
-    if (!fVCount) {
-        return false;
+        FAIL_MESH_VALIDATE("A vertex buffer is required.");
     }
 
     auto vb = static_cast<SkMeshPriv::VB*>(fVB.get());
@@ -770,41 +792,64 @@ bool SkMesh::validate() const {
     SkSafeMath sm;
     size_t vsize = sm.mul(fSpec->stride(), fVCount);
     if (sm.add(vsize, fVOffset) > vb->size()) {
-        return false;
+        FAIL_MESH_VALIDATE("The vertex buffer offset and vertex count reads beyond the end of the"
+                           " vertex buffer.");
     }
 
     if (fVOffset%fSpec->stride() != 0) {
-        return false;
+        FAIL_MESH_VALIDATE("The vertex offset (%zu) must be a multiple of the vertex stride (%zu).",
+                           fVOffset,
+                           fSpec->stride());
     }
 
     if (size_t uniformSize = fSpec->uniformSize()) {
         if (!fUniforms || fUniforms->size() < uniformSize) {
-            return false;
+            FAIL_MESH_VALIDATE("The uniform data is %zu bytes but must be at least %zu.",
+                               fUniforms->size(),
+                               uniformSize);
         }
     }
 
+    auto modeToStr = [](Mode m) {
+        switch (m) {
+            case Mode::kTriangles:     return "triangles";
+            case Mode::kTriangleStrip: return "triangle-strip";
+        }
+        SkUNREACHABLE;
+    };
     if (ib) {
         if (fICount < min_vcount_for_mode(fMode)) {
-            return false;
+            FAIL_MESH_VALIDATE("%s mode requires at least %zu indices but index count is %zu.",
+                               modeToStr(fMode),
+                               min_vcount_for_mode(fMode),
+                               fICount);
         }
         size_t isize = sm.mul(sizeof(uint16_t), fICount);
         if (sm.add(isize, fIOffset) > ib->size()) {
-            return false;
+            FAIL_MESH_VALIDATE("The index buffer offset and index count reads beyond the end of the"
+                               " index buffer.");
+
         }
         // If we allow 32 bit indices then this should enforce 4 byte alignment in that case.
         if (!SkIsAlign2(fIOffset)) {
-            return false;
+            FAIL_MESH_VALIDATE("The index offset must be a multiple of 2.");
         }
     } else {
         if (fVCount < min_vcount_for_mode(fMode)) {
-            return false;
+            FAIL_MESH_VALIDATE("%s mode requires at least %zu vertices but vertex count is %zu.",
+                               modeToStr(fMode),
+                               min_vcount_for_mode(fMode),
+                               fICount);
         }
-        if (fICount || fIOffset) {
-            return false;
-        }
+        SkASSERT(!fICount);
+        SkASSERT(!fIOffset);
     }
 
-    return sm.ok();
+    if (!sm.ok()) {
+        FAIL_MESH_VALIDATE("Overflow");
+    }
+#undef FAIL_MESH_VALIDATE
+    return {true, {}};
 }
 
 //////////////////////////////////////////////////////////////////////////////
